--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "youtube-playlist-creator",
   "version": "0.1.0",
   "private": true,
+  "homepage": "https://apricot13.github.io/youtube-playlist-url-generator",
   "dependencies": {
     "@testing-library/jest-dom": "^5.16.4",
     "@testing-library/react": "^13.3.0",
