--- a/.github/workflows/build_gh_pages.yml
+++ b/.github/workflows/build_gh_pages.yml
@@ -10,7 +10,7 @@ on:
 
 # A workflow run is made up of one or more jobs that can run sequentially or in parallel
 jobs:
-  build:
+  build_test:
     # The type of runner that the job will run on
     runs-on: ubuntu-latest
 
@@ -26,11 +26,10 @@ jobs:
         uses: actions/setup-node@v2
         with:
           node-version: ${{ matrix.node-version }}
-      - name: npm ci, build and test
+      - name: npm ci, build
         run: |
           npm ci
           npm run build --if-present
-          npm test      
       - name: deploy to gh-pages
         uses: peaceiris/actions-gh-pages@v3
         with:
